--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -7,12 +7,11 @@
     tools:context=".app.ui.activities.VideoDetailActivity">
 
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/iv_video"
+    <VideoView
+        android:layout_centerInParent="true"
+        android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 
     <RelativeLayout
@@ -41,7 +40,7 @@
             android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
-            android:id="@+id/ll_like"
+            android:id="@+id/ll_collect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/iv_follow"
@@ -52,14 +51,14 @@
 
 
             <ImageView
-                android:id="@+id/iv_like"
+                android:id="@+id/iv_collect"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
 
                 android:src="@mipmap/ic_launcher" />
 
             <TextView
-                android:id="@+id/tv_like_num"
+                android:id="@+id/tv_collect_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -72,10 +71,10 @@
 
 
         <LinearLayout
-            android:id="@+id/ll_comment"
+            android:id="@+id/ll_down_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_like"
+            android:layout_below="@+id/ll_collect"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
             android:gravity="center_horizontal"
@@ -83,13 +82,13 @@
 
 
             <ImageView
-                android:id="@+id/iv_comment"
+                android:id="@+id/iv_down"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
                 android:src="@mipmap/ic_launcher" />
 
             <TextView
-                android:id="@+id/tv_comment_num"
+                android:id="@+id/tv_down_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -105,7 +104,7 @@
             android:id="@+id/ll_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_comment"
+            android:layout_below="@+id/ll_down_count"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
             android:gravity="center_horizontal"
