--- a/app/src/main/res/layout/fragment_video_list.xml
+++ b/app/src/main/res/layout/fragment_video_list.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="6dp"
-    tools:context=".app.ui.fragments.VideoListFragment">
+    tools:context=".app.ui.fragments.RecommendFragment">
 
 </android.support.v7.widget.RecyclerView>
