--- a/app/src/main/res/layout/item_follow.xml
+++ b/app/src/main/res/layout/item_follow.xml
@@ -86,7 +86,7 @@
             android:textSize="15dp" />
 
         <TextView
-            android:id="@+id/tv_comment"
+            android:id="@+id/tv_down"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -98,7 +98,7 @@
             android:textSize="15dp" />
 
         <TextView
-            android:id="@+id/tv_share"
+            android:id="@+id/tv_collect"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
