--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_home_bottom_mid" />
 
 
 </RelativeLayout>
