--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -7,11 +7,11 @@
     tools:context=".app.ui.activities.VideoDetailActivity">
 
 
-    <VideoView
+    <com.youzi.player.YouZiPlayerView
         android:layout_centerInParent="true"
-        android:id="@+id/video_view"
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 
     <RelativeLayout
@@ -28,7 +28,7 @@
             android:id="@+id/iv_header"
             android:layout_width="49dp"
             android:layout_height="49dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_header_def" />
 
         <ImageView
             android:id="@+id/iv_follow"
@@ -37,7 +37,7 @@
             android:layout_below="@+id/iv_header"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="-10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_follow_before" />
 
         <LinearLayout
             android:id="@+id/ll_collect"
@@ -54,8 +54,7 @@
                 android:id="@+id/iv_collect"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
-
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_like_before" />
 
             <TextView
                 android:id="@+id/tv_collect_num"
@@ -85,7 +84,7 @@
                 android:id="@+id/iv_down"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_comment_before" />
 
             <TextView
                 android:id="@+id/tv_down_num"
@@ -115,7 +114,7 @@
                 android:id="@+id/iv_share"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_share" />
 
             <TextView
                 android:id="@+id/tv_share"
@@ -147,13 +146,13 @@
             android:id="@+id/iv_music"
             android:layout_width="27dp"
             android:layout_height="27dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_music" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="歌曲名称"
+            android:text="-歌曲名称"
             android:textColor="@android:color/white"
             android:textSize="13dp" />
 
