--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_logo"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_sort" />
 
     <TextView
         android:id="@+id/tv_name_hint"
