--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardBackgroundColor="#242424"
     app:cardCornerRadius="5dp">
 
@@ -16,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+            tools:src="@mipmap/ic_launcher" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_header"
@@ -25,7 +26,7 @@
             android:layout_below="@+id/iv_video"
             android:layout_marginLeft="9dp"
             android:layout_marginTop="-17dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_header_def" />
 
         <TextView
             android:id="@+id/tv_nick_name"
