图片加载统一，未登录状态展示

--- a/app/src/main/res/layout/item_follow.xml
+++ b/app/src/main/res/layout/item_follow.xml
@@ -13,7 +13,7 @@
         android:id="@+id/iv_header"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_header_def" />
 
 
     <TextView
