--- a/app/src/main/res/layout/layout_not_login.xml
+++ b/app/src/main/res/layout/layout_not_login.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
-
+    android:id="@+id/root_no_login"
+    android:orientation="vertical">
 
 
     <TextView
-        android:textSize="17dp"
-        android:text="当前未登录"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="当前未登录"
+        android:textColor="@android:color/white"
+        android:textSize="17dp" />
 
 
     <Button
         android:id="@+id/bt_click"
-        android:text="点击登录"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="点击登录" />
 
 
 </LinearLayout>
